--- a/Grid-J/config/jppf.properties
+++ b/Grid-J/config/jppf.properties
@@ -1,6 +1,6 @@
 #------------------------------------------------------------------------------#
 # JPPF.                                                                        #
-# Copyright (C) 2005-2016 JPPF Team.                                           #
+# Copyright (C) 2005-2018 JPPF Team.                                           #
 # http://www.jppf.org                                                          #
 #                                                                              #
 # Licensed under the Apache License, Version 2.0 (the "License");              #
@@ -32,7 +32,7 @@ jppf.drivers = driver1
 
 # Host name, or ip address, of the host the JPPF driver is running on
 # If auto discovery of the server is enabled, this needs not be specified.
-driver1.jppf.server.host = 210.26.55.211
+driver1.jppf.server.host = localhost
 
 # port number the server is listening to for connections.
 # Defaults to 11111 if SSL is disabled, 11443 if SSL is enabled
@@ -132,11 +132,11 @@ jppf.resolve.addresses = true
 #jppf.remote.execution.enabled = true
 
 #------------------------------------------------------------------------------#
-# Configuration of automatic discovery of JPPF drivers.                        #
+# Configuration of automatic discovery of JPPF drivers via UDP multicast.      #
 #------------------------------------------------------------------------------#
 
 # Enable or disable discovery of JPPF drivers. Defaults to true (enabled)
-jppf.discovery.enabled = false
+#jppf.discovery.enabled = true
 
 # UDP multicast group to which drivers broadcast their connection parameters 
 # and to which clients and nodes listen. Defaults to 230.0.0.1
@@ -186,14 +186,6 @@ jppf.discovery.enabled = false
 #jppf.object.serialization.class = org.jppf.serialization.kryo.KryoSerialization
 
 #------------------------------------------------------------------------------#
-# Specify a data transformation class.                                         #
-# If left unspecified, no transformation is used.                              #
-#------------------------------------------------------------------------------#
-
-# Defined in the "Network Data Encryption" sample
-#jppf.data.transform.class = org.jppf.example.dataencryption.SecureKeyCipherTransform
-
-#------------------------------------------------------------------------------#
 # Load-balancing configuration. The load-balancing determines how the tasks in #
 # the jobs are distributed over the available driver connections, including    #
 # the connection to the local executor (if  enabled).                          #
@@ -210,7 +202,7 @@ jppf.load.balancing.algorithm = manual
 jppf.load.balancing.profile = manual_profile
 
 # "manual" profile
-jppf.load.balancing.profile.manual_profile.size = 100000
+jppf.load.balancing.profile.manual_profile.size = 1000000
 
 # "autotuned" profile
 jppf.load.balancing.profile.autotuned_profile.size = 5
